@@ -7,6 +7,7 @@ using `glibc' in the "product" field.
 
 The following bugs are resolved with this release:
 
+  [20019] NULL pointer dereference in libc.so.6 IFUNC due to uninitialized GOT
   [26224] iconv hangs when converting some invalid inputs from several IBM
     character sets (CVE-2020-27618)
   [26534] libm.so 2.32 SIGILL in pow() due to FMA4 instruction on non-FMA4
